--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,15 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@myngapp/admin-common": ["libs/admin-common/src/index.ts"],
+      "@myngapp/admin-core": ["libs/admin-core/src/index.ts"],
+      "@myngapp/common-core": ["libs/common-core/src/index.ts"],
+      "@myngapp/reward-point-common": ["libs/reward-point-common/src/index.ts"],
+      "@myngapp/reward-point-core": ["libs/reward-point-core/src/index.ts"],
+      "@myngapp/shared-common": ["libs/shared-common/src/index.ts"],
+      "@myngapp/shared-core": ["libs/shared-core/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
